--- a/client/src/Translations/En/en.json
+++ b/client/src/Translations/En/en.json
@@ -4,7 +4,7 @@
   "ourexpertise": "Our Expertise",
   "client": "Reference",
   "teams": "Team",
-  "contactus": "Contact",
+  "contactus": "Contact Us",
  
   "NavbarPage" : {
     "Selectelanguage":"Select language",
