changing hero and team

--- a/client/src/Translations/En/en.json
+++ b/client/src/Translations/En/en.json
@@ -31,8 +31,8 @@
     "headingtxt3":"Expertise Requirement",
     "headingtxt4":"Unique Designs",
     "subheadingtxt1":"With our expert consultants, we develop projects tailored to the new technological needs of institutions and provide innovative financial solutions.",
-    "subheadingtxt2":"With Agile Project Managers, we carefully track processes and complete developments on time and with precision.",
-    "subheadingtxt3":"The key to realizing new ideas is engaging with experts. Our experienced team is dedicated to delivering innovative solutions tailored to your needs.",
+    "subheadingtxt2": "With agile project managers, we carefully track processes to deliver developments on time and with precision." ,
+    "subheadingtxt3": "Bringing new ideas to life requires collaboration with experts. Our experienced team is committed to providing innovative, customized solutions to meet your unique needs.",
     "subheadingtxt4":"Companies seeking unique products for their business processes often encounter integration issues with existing systems. We develop the most suitable solutions based on our needs analysis."
   },
   "AboutPage":{
@@ -46,14 +46,15 @@
    "heading": "Our Expertise",
    "subheading": "We develop projects in the following areas.",
    "firstgridheading": "Precious Metals Platform",
-   "firstgridsubheading": "The Precious Metals Platform manages transactions across exchanges, banks, and financial institutions. It automates precious metals operations, provides profit/loss analysis, and integrates off-system financial resources into the financial system.",
+   "firstgridsubheading1": "The Precious Metals Platform manages transactions in exchanges, banks, and financial institutions.",    
+   "firstgridsubheading2": "This system optimizes precious metals transactions, provides profit/loss analysis and balance sheet automation, and integrates financial resources into the system.",
    "secondgridheading": "Capital Markets Solution",
    "secondgridsubheading1": "Our digital, international, and cloud-based system creates financial products and expands access to capital markets. ",
    "secondgridsubheading2": " Utilizing IoT technology, it enables real-time data transmission and manages securities transactions, risk management, customer accounts, and reporting all on a single platform.",
    "thirdgridhaeding": "Wealth Management",
    "thirdgridsubhaeding": "The Siyeso Wealth Management Solution is a comprehensive private banking financial tool, meticulously designed to address the challenges faced by asset managers and support the execution of sustainable and profitable business operations.",
    "forthgridheading": "R&D Activities",
-   "forthgridsubheading": "New solutions integrated with financial systems are being developed."
+   "forthgridsubheading": "New solutions are developed, integrated with financial systems."
 },
   "ClientPage":{
     "heading": "References",
@@ -67,29 +68,29 @@
     "title1sub":"General Director",
     "title2":"Managing Partner",
     "title2sub":"",
-    "title3":"Consultant",
+    "title3":"Managing Partner",
     "title3sub":"",
-    "title4":"Software Architect",
+    "title4":"Deputy General Manager",
     "title4sub":"",
     "title5":"Project Manager",
     "title5sub":"",
     "title6":"Consultant",
     "title6sub":"",
-    "title7":"Project Manager",
+    "title7":"Business Analyst",
     "title7sub":"",
-    "title8":"Software Developer",
+    "title8":"Software Engineer",
     "title8sub":"",
-    "title9":"Analyst",
+    "title9":"Project Manager",
     "title9sub":"",
-    "title10":"Project Manager",
+    "title10":"Business Analyst",
     "title10sub":"",
     "title11":"Software Engineer",
     "title11sub":"",
-    "title12":"Analyst",
+    "title12":"Business Analyst",
     "title12sub":"",
     "title13":"Software Engineer",
     "title13sub":"",
-    "title14":"Software Developer",
+    "title14":"Software Engineer",
     "title14sub":""
   },
   "ContactUsPage":{
@@ -112,7 +113,7 @@
   },
   "FooterPage":{
     "heading1":"Our Information",
-    "address":"Address: Sanayi Neighborhood, Teknopark Boulevard, No: 1 / 2C Inner Door No: 2105 Pendik ISTANBUL",
+    "address":"Address: Sanayi Mahallesi, Teknopark Bulvarı, No: 1 / 2C İç Kapı No: 2105 Pendik İSTANBUL",
     "phone":"Office: +90 532 595 97 09",
     "mail":"Support: info@siyeso.com",
     "heading2": "Others",
