--- a/client/src/Translations/TR/tr.json
+++ b/client/src/Translations/TR/tr.json
@@ -3,7 +3,7 @@
   "about": "Hakkımızda",
   "ourexpertise": "Uzmanlık Alanlarımız",
   "client": "Referanslar",
-  "teams": "Ekip",
+  "teams": "Takım",
   "contactus": "İletişim",
 
   "NavbarPage" : {
@@ -31,7 +31,7 @@
     "headingtxt3":"Uzmanlık Gereksinimi",
     "headingtxt4":"​Benzersiz Tasarımlar",
     "subheadingtxt1":"Uzman danışmanlarımızla, kurumların yeni teknolojik ihtiyaçlarına yönelik projeler geliştiriyor ve yenilikçi finansal çözümler sunuyoruz.",
-    "subheadingtxt2":"Çevik Yaklaşımı benimseyen Proje Yöneticilerimizle, süreçleri dikkatle takip ederek geliştirmeleri zamanında ve eksiksiz tamamlıyoruz.",
+    "subheadingtxt2":"Çevik yaklaşımı benimseyen proje yöneticilerimizle, süreçleri dikkatle takip ederek projeleri zamanında ve eksiksiz geliştiriyoruz.",
     "subheadingtxt3":"Yeni fikirleri hayata geçirmede en önemli adım, uzmanlara ulaşmak; deneyimli ekibimizle ihtiyaçlarınıza yenilikçi çözümler sunmayı amaçlıyoruz.",
     "subheadingtxt4":"Şirketler, mevcut sistemlerle entegrasyon sırasında uyum sorunları yaşarken, ihtiyaç analizleriyle en uygun çözümleri geliştiriyoruz."
   },
@@ -47,14 +47,14 @@
     "subheading":"Aşağıdaki alanlarda projeler geliştiriyoruz.",
     "firstgridheading":"​​Kıymetli Madenler Platformu",
     "firstgridsubheading1":"Kıymetli Madenler Platformu, borsa, banka ve finans kurumlarındaki işlemleri yönetir.  ",
-    "firstgridsubheading2":"Bu sistem, kıymetli maden işlemlerini otomatikleştirir, kâr/zarar analizi ve bilanço otomasyonu sağlar, ayrıca finansal kaynakları sisteme kazandırır.",
+    "firstgridsubheading2":"Bu sistem, kıymetli maden işlemlerini optimize ediyoruz, kâr/zarar analizi ve bilanço otomasyonu sağlar, ayrıca finansal kaynakları sisteme kazandırır.",
     "secondgridheading":"Sermaye Piyasaları",
     "secondgridsubheading1":"Dijital, uluslararası ve bulut tabanlı sistemimiz, finansal ürünler oluşturur ve sermaye piyasalarına erişimi genişletir. IoT teknolojisi ile verilerin gerçek zamanlı aktarımını  ",
     "secondgridsubheading2":" sağlar ve menkul kıymet işlemlerini, risk yönetimini, müşteri hesaplarını ve raporlamayı tek platformda yönetir.",
     "thirdgridhaeding":"Servet Yönetimi",
     "thirdgridsubhaeding":"Siyeso Servet Yönetimi Çözümü, varlık yöneticilerinin zorluklarını ele alarak sürdürülebilir ve kârlı iş yürütmelerine yardımcı olan güçlü bir Özel Bankacılık finans çözümüdür.",
     "forthgridheading":"Ar-Ge Çalışmaları",
-    "forthgridsubheading":"Finansal sistemlerle bütünleşik, yeni çözümler üretilmektedir."
+    "forthgridsubheading":"Finansal sistemlerle bütünleşik, yeni çözümler üretilir."
   },
   "ClientPage":{
     "heading": "Referanslar",
@@ -64,33 +64,33 @@
     "heading":"Takım",
     "subheading1":"Her geçen gün büyüyen, ",
     "subheading2":" deneyimli kadromuz ile birlikte \"yenilikçi çözümler\" sunmaya devam edebiliyoruz.",
-    "title1":"Yönetici Ortak",
+    "title1":"Yönetici Ortak <br>Genel Müdür",
     "title1sub":"Genel Müdür",
     "title2":"Yönetici Ortak",
     "title2sub":"",
-    "title3":"Danışman",
+    "title3":"Yönetici Ortak",
     "title3sub":"",
-    "title4":"Yazılım Mimarı",
+    "title4":"Genel Müdür Yardımcısı ",
     "title4sub":"",
     "title5":"Proje Yöneticisi",
     "title5sub":"",
     "title6":"Danışman",
     "title6sub":"",
-    "title7":"Proje Yöneticisi",
+    "title7":"İş Analisti",
     "title7sub":"",
-    "title8":"Yazılım Geliştirici",
+    "title8":"Yazılım Mühendisi",
     "title8sub":"",
-    "title9":"Analiz Uzmanı",
+    "title9":"Proje Yöneticisi",
     "title9sub":"",
-    "title10":"Proje Yöneticisi",
+    "title10":"İş Analisti",
     "title10sub":"",
     "title11":"Yazılım Mühendisi",
     "title11sub":"",
-    "title12":"Analiz Uzmanı",
+    "title12":"İş Analisti",
     "title12sub":"",
     "title13":"Yazılım Mühendisi" ,
     "title13sub":"",
-    "title14":"Yazılım Geliştirici",
+    "title14":"Yazılım Mühendisi",
     "title14sub":""
   }, 
   "ContactUsPage": {
